# setforge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  LICENSE  Makefile  README.md  config.yaml  conftest.py  pyproject.toml
.config/: wt.toml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/: commands.md  configuration.md  migrating-from-my-setup.md  releasing.md  tutorial.md
docs/superpowers/plans/: 2026-06-04-p5qc34-forked-scalar.md  2026-06-04-p5qc7-disposition.md  2026-06-04-p5qc9-hunk-wizard.md  2026-06-07-p5qc-14.17-incr2-deploy-compose.md  2026-06-08-p5qc-14.17-incr3-marker-migration.md
my_setup/: _editor.py  binaries.py  capture.py  capture_wizard.py  claude_plugins.py  cli.py  compare.py  config.py  deploy.py  errors.py  extensions.py  jsonc.py  marketplace_cache_wizard.py  merge.py  section_reconcile.py  section_wizard.py  sections.py  transitions.py  vscode_extensions.py  wizard.py  yaml_merge.py
scripts/: __init__.py  capture_docs_mockups.sh  check-no-bd-refs.sh  check_schema_gates.py  release_preflight.py
setforge/: __init__.py  _changelog_parser.py  _editor.py  _levenshtein.py  _log_filter.py  _pypi_client.py  _redact.py  anchors.py  atomicio.py  base_store.py  base_store_format.py  binaries.py  capture.py  capture_wizard.py  cargo.py  claude_marketplace_cache.py  claude_plugins.py  claude_yaml_editor.py  cli.py  compare.py  config.py  conflict_wizard.py  deploy.py  disposition_merge.py  errors.py  git_ops.py  host_local_inject.py  host_local_marker_migration.py  jsonc.py  local_config.py  local_overlay.py  locking.py  markdown_merge.py  markdown_spans.py  marketplace_cache_wizard.py  mcp_servers.py  merge.py  overlay_body_wizard.py  overlay_deploy.py  overlay_inject.py  (+27 more)
setforge/cli/: __init__.py  __main__.py  _anchor_picker.py  _config_helpers.py  _config_repo.py  _confirm.py  _detect_helpers.py  _git_check.py  _help_examples.py  _helpers.py  _init_helpers.py  _install_helpers.py  _mcp_helpers.py  _output.py  _plugin_helpers.py  _revert_confirm.py  _secrets_confirm.py  _validate_errors.py  _welcome.py  compare.py  completion.py  config.py  ext.py  init.py  install.py  migrate.py  orphans.py  override.py  plugins.py  profile.py  promote.py  revert.py  section.py  snapshot.py  status.py  sync.py  upgrade.py  validate.py
setforge/cli/completions/: __init__.py  _setforge  setforge.bash  setforge.fish
setforge/migrations/: __init__.py  _contract_2_0.py  _fs_ops.py  _local_yaml.py  _yaml_ops.py
tests/: conftest.py  test_5twm_home_relative.py  test_5twm_non_tmln_errors_preserved.py  test_5twm_setforge_yaml_nested_error.py  test_5twm_setforge_yaml_top_level_typo.py  test_5z11_compare_provenance.py  test_5z11_local_overlay_resolver.py  test_5z11_marketplace_cross_ref.py  test_7dav_completion_fallback.py  test_7dav_completion_path.py  test_7dav_completion_timing.py  test_7dav_completion_value.py  test_7dav_config_add_remove.py  test_7dav_config_show.py  test_7dav_validate_before_write.py  test_7dav_yaml_round_trip.py  test__editor.py  test_anchor_in_section.py  test_atomicio.py  test_auditfix_absent_sentinel.py  test_auditfix_capmode.py  test_auditfix_capture_atomic.py  test_auditfix_capture_keep_tracked.py  test_auditfix_deepspan.py  test_auditfix_deploy_filemode_revert.py  test_auditfix_deploy_filemode_transition.py  test_auditfix_disposition_fallback.py  test_auditfix_downmig_below_1_2.py  test_auditfix_downmig_minver.py  test_auditfix_downmig_samemajor_floor.py  test_auditfix_downmig_shallow_disposition.py  test_auditfix_dup_section_names.py  test_auditfix_ext_exclude_casing.py  test_auditfix_ext_id_regex.py  test_auditfix_ext_robustness.py  test_auditfix_extinherit.py  test_auditfix_fetch_stale_ref.py  test_auditfix_forward_enum.py  test_auditfix_init_clobber_localyaml.py  test_auditfix_init_stub_appended.py  (+212 more)
tests/cli/: test_help_examples.py  test_output_modes.py
tests/docker/: Dockerfile  conftest.py  pyte_session.py  test_auditfix_plugin_add_marketplace.py  test_auditfix_plugins_edges.py  test_auditfix_revert_order.py  test_conftest_hash.py  test_conftest_xdist.py  test_e2e_docker.py  test_e2e_docker_5z11.py  test_e2e_docker_7dav.py  test_e2e_docker_auditfix_ext_e2e.py  test_e2e_docker_auditfix_override_e2e.py  test_e2e_docker_auditfix_plugin_synccache_e2e.py  test_e2e_docker_auditfix_secrets_proceed_e2e.py  test_e2e_docker_auditfix_snapshot_e2e.py  test_e2e_docker_auditfix_status_e2e.py  test_e2e_docker_auto_confirm.py  test_e2e_docker_auto_promote.py  test_e2e_docker_completion.py  test_e2e_docker_config_cli.py  test_e2e_docker_conflict_wizard.py  test_e2e_docker_dg2a.py  test_e2e_docker_disposition.py  test_e2e_docker_dry_run.py  test_e2e_docker_dual_representation.py  test_e2e_docker_fetch.py  test_e2e_docker_file_mode.py  test_e2e_docker_forked_scalar.py  test_e2e_docker_fresh_host.py  test_e2e_docker_host_local.py  test_e2e_docker_host_local_conversion.py  test_e2e_docker_init_source.py  test_e2e_docker_local_overlay.py  test_e2e_docker_m3qx.py  test_e2e_docker_mcp_cargo.py  test_e2e_docker_meta_schema.py  test_e2e_docker_migrate.py  test_e2e_docker_orphans.py  test_e2e_docker_overlay_fields.py  (+21 more)
tests/fixtures/: pre_9by_CLAUDE.md  pre_hash_CLAUDE.md  sample_config.yaml
tests/fixtures/e2e/: my_setup.test.yaml  setforge.test.yaml
tests/fixtures/e2e/templates/: python-conventions.md
tests/fixtures/e2e/tracked/chain/: base.txt  child.txt  grand.txt
tests/fixtures/e2e/tracked/claude/: CLAUDE.md  superpowers-prefs.md
tests/fixtures/e2e/tracked/comprehensive/: config.yaml  data.json  notes.md  preserve-settings.json
tests/fixtures/e2e/tracked/directory/: file-a.txt  file-b.txt
tests/fixtures/e2e/tracked/disposition/: config.yaml  note.md
tests/fixtures/pre_bump_meta_v1/: meta.json
tests/fixtures/schema_corpus/: README.md
tests/fixtures/schema_corpus/1.0/: setforge.yaml
tests/fixtures/schema_corpus/1.1/: setforge.yaml
tests/fixtures/schema_corpus/1.2/: setforge.yaml
tests/fixtures/schema_corpus/2.0/: setforge.yaml
vscode-extensions/: vm-headless-full.txt
(+26 files in other folders)
