[project]
name = "setforge"
version = "0.2.0"
description = "Tracked-file + VSCode-extension + Claude-plugin orchestration CLI"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Raul Farkas" }]
keywords = ["dotfiles", "vscode", "claude", "config", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "ruamel.yaml>=0.18",
    "platformdirs>=4.0",
    "jinja2>=3.1",
    "json-five>=1.1,<2",
    "rich>=13",
]

[project.urls]
Homepage = "https://github.com/raulfrk/setforge"
Source = "https://github.com/raulfrk/setforge"
Issues = "https://github.com/raulfrk/setforge/issues"
Changelog = "https://github.com/raulfrk/setforge/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pexpect>=4.9",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "ruff>=0.7",
]

[project.scripts]
setforge = "setforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["setforge"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "PT", "ANN"]
# ANN202 is a permanent ignore: project annotates public surface only (per CLAUDE.md).
ignore = [
    "ANN202",
]

[tool.ruff.lint.per-file-ignores]
# yaml_merge.py overlays ruamel.yaml CommentedMap / CommentedSeq / scalar
# trees at the YAML-document boundary. ruamel does not ship public-API
# type stubs, so the merge helpers accept and return `typing.Any`
# per the json-five-style untyped seam. Tightening to a union over
# ruamel's private node types would import third-party internals into
# our annotation surface without buying mypy coverage that callers can
# verify. ANN401 is the right per-file allow here.
"setforge/yaml_merge.py" = ["ANN401"]
# jsonc.py wraps json-five's untyped AST (model + lib_json). Same
# untyped-seam reasoning as yaml_merge.py: the third-party type surface
# is the constraint, not our annotation discipline.
"setforge/jsonc.py" = ["ANN401"]
# tests/ holds pytest fixture parameters (`monkeypatch`, `tmp_path`,
# `capsys`, …) whose types are obvious from naming and whose explicit
# annotation buys no daily reading clarity. ANN401 is also allowed
# here because tests construct ad-hoc dict / list scaffolds where
# `Any` is the only honest type.
"tests/**" = ["ANN001", "ANN401"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"subprocess.run".msg = "Use `import subprocess` and call `subprocess.run(...)` — required for test monkeypatch path `setforge.<module>.subprocess.run` to resolve correctly."

[tool.pytest.ini_options]
markers = [
    "e2e_docker: end-to-end Docker tests against a real Debian + claude + code container (opt-in via -m e2e_docker; not run by default)",
]
# Default run skips e2e_docker so plain `pytest` stays fast and docker-free.
addopts = "-m 'not e2e_docker'"
