[project]
name = "setforge"
version = "0.2.2"
description = "Tracked-file + VSCode-extension + Claude-plugin orchestration CLI"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Raul Farkas" }]
keywords = ["dotfiles", "vscode", "claude", "config", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "ruamel.yaml>=0.18",
    "platformdirs>=4.0",
    "prompt_toolkit>=3.0.50",
    "jinja2>=3.1",
    "json-five>=1.1,<2",
    "rich>=13",
    "packaging>=21",
]

[project.urls]
Homepage = "https://github.com/raulfrk/setforge"
Source = "https://github.com/raulfrk/setforge"
Issues = "https://github.com/raulfrk/setforge/issues"
Changelog = "https://github.com/raulfrk/setforge/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pexpect>=4.9",
    "pyte>=0.8.2",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "ruff>=0.7",
]

[project.scripts]
setforge = "setforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["setforge"]
# Vendored shell completion templates under setforge/cli/completions/
# (_setforge / setforge.bash / setforge.fish) ship as package data so the
# importlib.resources fallback in setforge/cli/completion.py works when
# `setforge --show-completion=<shell>` fails (typer regression / binary
# missing / subprocess timeout / empty stdout). Hatchling picks them up
# automatically as non-Python files under a packaged directory; the empty
# __init__.py keeps them discoverable via importlib.resources.files().

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "PT", "ANN", "C901", "T20"]
# ANN202 is a permanent ignore: project annotates public surface only (per CLAUDE.md).
ignore = [
    "ANN202",
]

[tool.ruff.lint.per-file-ignores]
# yaml_merge.py overlays ruamel.yaml CommentedMap / CommentedSeq / scalar
# trees at the YAML-document boundary. ruamel does not ship public-API
# type stubs, so the merge helpers accept and return `typing.Any`
# per the json-five-style untyped seam. Tightening to a union over
# ruamel's private node types would import third-party internals into
# our annotation surface without buying mypy coverage that callers can
# verify. ANN401 is the right per-file allow here.
"setforge/yaml_merge.py" = ["ANN401"]
# jsonc.py wraps json-five's untyped AST (model + lib_json). Same
# untyped-seam reasoning as yaml_merge.py: the third-party type surface
# is the constraint, not our annotation discipline.
"setforge/jsonc.py" = ["ANN401"]
# tests/ holds pytest fixture parameters (`monkeypatch`, `tmp_path`,
# `capsys`, …) whose types are obvious from naming and whose explicit
# annotation buys no daily reading clarity. ANN401 is also allowed
# here because tests construct ad-hoc dict / list scaffolds where
# `Any` is the only honest type. C901 is allowed because test code
# (especially binary-stub dispatch in tests/test_claude_plugins.py
# and the e2e Docker fixture in tests/docker/conftest.py) is
# naturally branchy by design; cyclomatic complexity is a
# production-code smell, not a test-quality signal. T20 (no print)
# is allowed because tests legitimately use `print` as a callable
# fixture for dispatch tests (see tests/cli/test_output_modes.py).
"tests/**" = ["ANN001", "ANN401", "C901", "T20"]
# scripts/ holds CLI utilities (e.g. release_preflight.py) that print
# status messages to stdout as part of their primary contract — they
# are tools, not library code. T20 (no print) does not apply.
"scripts/**" = ["T20"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"subprocess.run".msg = "Use `import subprocess` and call `subprocess.run(...)` — required for test monkeypatch path `setforge.<module>.subprocess.run` to resolve correctly."

[tool.ruff.lint.flake8-bugbear]
# Typer's ``Option`` / ``Argument`` are explicitly documented as
# function-default-call markers (the CLI parser detects them and rewrites
# the default at parse time). ruff's B008 normally flags this pattern as
# "do not perform function call in argument defaults"; bypass for the
# pair that the project depends on.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.pytest.ini_options]
markers = [
    "e2e_docker: end-to-end Docker tests against a real Debian + claude + code container (opt-in via -m e2e_docker; not run by default)",
    "fresh_host: opt this test out of the autouse fresh-host suppression fixture so the install welcome gate fires",
    "xdist_group: serialize tagged tests to one xdist worker for daemon-bound resources (see tests/docker/conftest.py docker_daemon convention)",
]
# Default run skips e2e_docker so plain `pytest` stays fast and docker-free.
addopts = "-m 'not e2e_docker' --cov=setforge --cov-branch --cov-report=term-missing --cov-fail-under=83"

[tool.coverage.run]
source = ["setforge"]
branch = true
omit = ["tests/*"]
# Required for pytest-xdist compatibility: each worker writes its own
# .coverage.<host>.<pid>.<random> file. Without this, pytest_configure_node
# fails with `AttributeError: 'Central' object has no attribute
# 'configure_node'` when --cov is active during -m e2e_docker runs (auto
# -n 2 via the conftest.py hook).
parallel = true
sigterm = true

[tool.coverage.report]
show_missing = true
fail_under = 83
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:", "@(typing\\.)?overload"]

[tool.mypy]
# Aligned with [project].requires-python and [tool.ruff].target-version
# so PEP 695 type-parameter syntax (e.g. ``class Foo[T]:``) parses.
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true

# json5 (json-five on PyPI) ships ``py.typed`` but its public ``dumper``
# module exposes ``ModelDumper`` as a sibling of ``BaseDumper`` rather
# than a subclass, so the documented ``dumps(model, dumper=ModelDumper())``
# usage type-checks as an [arg-type] violation against the library's own
# annotations. Treat the json5 surface as the untyped seam that
# ``setforge.jsonc`` already documents (mirrors the per-file ``ANN401``
# allow under ``[tool.ruff.lint.per-file-ignores]``) so the wrapper's
# bug is not propagated into our error log.
[[tool.mypy.overrides]]
module = ["json5", "json5.*"]
follow_imports = "skip"
